syntax = "proto2";

enum MIDSessionMeterValueReadingFlag {
	START  = 1;
	TARIFF = 2;
	END    = 4;
}

enum MIDSessionMeterValueFlag {
	TIME_UNKNOWN      = 8;
	TIME_INFORMATIVE  = 16;
	TIME_SYNCHRONIZED = 32;
	TIME_RELATIVE     = 64;
	METER_ERROR       = 128;
}

enum MIDSessionAuthType {
	CLOUD = 0;
	RFID = 1;
	BLE = 2;
	ISO15118 = 3;
	NEXTGEN = 4;
}

message MIDSessionId {
	required bytes uuid = 1;
}

message MIDSessionAuth {
	required MIDSessionAuthType type = 1;
	required bytes tag = 2;
}

message MIDSessionVersion {
	required string code = 2;
}

message MIDSessionMeterValue {
	required uint64 time = 1;
	required uint32 meter = 3;
	required MIDSessionMeterValueFlag flag = 2;
}

message MIDSessionRecord {
	required uint32 rec_id = 1;
	required uint32 rec_crc = 2;
	optional MIDSessionId id = 3;
	optional MIDSessionAuth auth = 4;
	optional MIDSessionMeterValue meter_value = 6;
	optional MIDSessionVersion lr_version = 5;
	optional MIDSessionVersion fw_version = 7;
}
